manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "82058454-test"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "82058454.test"
  template:
    metadata:
      labels:
        app: "82058454.test"
    spec:
      containers:
        - name: "82058454-test"
          image: cepgstapacr.azurecr.io/82058454.test
          ports:
          - containerPort: 8080
