manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: my-82058454.test
spec:
    ports:
    - port: 8080 
    selector:
        app: "82058454.test"
